Fixed some bugs, potential bugs and malicious code detected by FindBugs tool.
git-svn-id: https://svn.code.sf.net/p/sglj/code@7 968d606d-c743-427b-9660-ae17dc8b1817